--- a/Elmla3eb/Base.lproj/ProfileVC.xib
+++ b/Elmla3eb/Base.lproj/ProfileVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,6 +17,7 @@
                 <outlet property="doneButton" destination="Q81-E8-FaO" id="qvE-G8-IXp"/>
                 <outlet property="editProfileBtn" destination="GRV-ts-b9L" id="JxA-no-cKL"/>
                 <outlet property="favPoints" destination="QmM-fg-Dta" id="rPj-dq-MU8"/>
+                <outlet property="loadingActivity" destination="1Jm-pW-mGB" id="lY9-Ex-zwK"/>
                 <outlet property="phoneNumTxt" destination="RRw-sR-yjA" id="kyD-bd-oqV"/>
                 <outlet property="playerPosition" destination="YcD-qx-qv0" id="Qfi-tV-7wb"/>
                 <outlet property="pointslbl" destination="JUw-mT-sTe" id="AUq-xs-wsF"/>
@@ -252,13 +253,13 @@
                                     <rect key="frame" x="0.0" y="52.5" width="280" height="38"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calender_icon" translatesAutoresizingMaskIntoConstraints="NO" id="kgP-jc-xfi">
-                                            <rect key="frame" x="10" y="10" width="17.5" height="18"/>
+                                            <rect key="frame" x="10" y="10" width="17" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="kgP-jc-xfi" secondAttribute="height" multiplier="1:1" id="rgF-IP-5aR"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date of Birth :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="ory-LF-7VW">
-                                            <rect key="frame" x="35.5" y="10" width="99" height="18"/>
+                                            <rect key="frame" x="35" y="10" width="99" height="18"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                             <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -267,7 +268,7 @@
                                             </variation>
                                         </label>
                                         <textField opaque="NO" clipsSubviews="YES" tag="20" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="......" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="aex-xe-mkE" customClass="UITextFieldX" customModule="Elmla3eb" customModuleProvider="target">
-                                            <rect key="frame" x="137.5" y="4" width="140" height="30"/>
+                                            <rect key="frame" x="137" y="4" width="140.5" height="30"/>
                                             <color key="backgroundColor" red="0.80609840154647827" green="0.84683185815811157" blue="0.8559192419052124" alpha="0.075717037671232876" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -497,6 +498,14 @@
                         <action selector="loadImageButtonTappedWithSender:" destination="-1" eventType="touchUpInside" id="L6i-MT-1RI"/>
                     </connections>
                 </button>
+                <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="1Jm-pW-mGB">
+                    <rect key="frame" x="141.5" y="265.5" width="37" height="37"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.56604497832369938" colorSpace="calibratedRGB"/>
+                    <color key="color" red="0.36078431370000003" green="0.68235294120000001" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -516,7 +525,9 @@
                 <constraint firstItem="GRV-ts-b9L" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="N1r-pU-rYo"/>
                 <constraint firstItem="211-ai-ejT" firstAttribute="height" secondItem="xtd-oM-g0i" secondAttribute="height" id="Ol0-kF-nWP"/>
                 <constraint firstItem="JUw-mT-sTe" firstAttribute="centerY" secondItem="GRV-ts-b9L" secondAttribute="centerY" id="RFm-y2-6UF"/>
+                <constraint firstItem="1Jm-pW-mGB" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Tta-d0-Qk0"/>
                 <constraint firstItem="211-ai-ejT" firstAttribute="centerX" secondItem="xtd-oM-g0i" secondAttribute="centerX" id="XFI-83-Alc"/>
+                <constraint firstItem="1Jm-pW-mGB" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="XpA-Vf-fOC"/>
                 <constraint firstItem="211-ai-ejT" firstAttribute="centerY" secondItem="xtd-oM-g0i" secondAttribute="centerY" id="YEd-a5-yhq"/>
                 <constraint firstItem="Hu8-vN-uaR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dFd-1u-rgr"/>
                 <constraint firstItem="NDq-0c-xVB" firstAttribute="height" secondItem="WZo-ro-ceR" secondAttribute="height" id="eAK-SC-h0E"/>
