--- a/Elmla3eb/Base.lproj/ProfileVC.xib
+++ b/Elmla3eb/Base.lproj/ProfileVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -26,6 +26,7 @@
                 <outlet property="profileImageBtn" destination="NDq-0c-xVB" id="ZwO-zm-8Tl"/>
                 <outlet property="snapCTxt" destination="ZZ4-zI-BcD" id="sCV-ak-4wE"/>
                 <outlet property="teamName" destination="9rr-h7-eEz" id="svO-zd-AVo"/>
+                <outlet property="uploadingPhotoLbl" destination="5uH-FC-mAl" id="wtM-rk-0P6"/>
                 <outlet property="userName" destination="k0a-Pe-WEn" id="ICV-hf-aU8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -506,6 +507,13 @@
                         <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </activityIndicatorView>
+                <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uploading Photo,     Please wait..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="5uH-FC-mAl">
+                    <rect key="frame" x="92.5" y="303" width="135.5" height="41"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.47557255990000002" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                    <color key="textColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="0.93000000000000005" colorSpace="calibratedRGB"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -518,6 +526,7 @@
                 <constraint firstItem="JUw-mT-sTe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="56f-Dy-cM4"/>
                 <constraint firstAttribute="trailing" secondItem="GRV-ts-b9L" secondAttribute="trailing" constant="15" id="62o-vu-FOR"/>
                 <constraint firstItem="k0a-Pe-WEn" firstAttribute="top" secondItem="WZo-ro-ceR" secondAttribute="bottom" constant="10" id="9IU-r4-IbP"/>
+                <constraint firstItem="5uH-FC-mAl" firstAttribute="centerX" secondItem="1Jm-pW-mGB" secondAttribute="centerX" id="9xf-cZ-Eca"/>
                 <constraint firstAttribute="trailing" secondItem="Hu8-vN-uaR" secondAttribute="trailing" id="BsD-4p-gS8"/>
                 <constraint firstItem="NDq-0c-xVB" firstAttribute="centerX" secondItem="WZo-ro-ceR" secondAttribute="centerX" id="CYZ-Qa-Us6"/>
                 <constraint firstItem="xtd-oM-g0i" firstAttribute="top" secondItem="k0a-Pe-WEn" secondAttribute="bottom" constant="5" id="DtZ-Kx-7Sf"/>
@@ -530,6 +539,7 @@
                 <constraint firstItem="1Jm-pW-mGB" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="XpA-Vf-fOC"/>
                 <constraint firstItem="211-ai-ejT" firstAttribute="centerY" secondItem="xtd-oM-g0i" secondAttribute="centerY" id="YEd-a5-yhq"/>
                 <constraint firstItem="Hu8-vN-uaR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dFd-1u-rgr"/>
+                <constraint firstItem="5uH-FC-mAl" firstAttribute="top" secondItem="1Jm-pW-mGB" secondAttribute="bottom" constant="0.5" id="dfD-99-bJH"/>
                 <constraint firstItem="NDq-0c-xVB" firstAttribute="height" secondItem="WZo-ro-ceR" secondAttribute="height" id="eAK-SC-h0E"/>
                 <constraint firstItem="N0z-Xs-NsU" firstAttribute="centerX" secondItem="k0a-Pe-WEn" secondAttribute="centerX" id="fZ2-Z4-cJ3"/>
                 <constraint firstItem="211-ai-ejT" firstAttribute="width" secondItem="xtd-oM-g0i" secondAttribute="width" id="gKH-hy-dyc"/>
